fixed layout for tables and footer
- load- and nothing-found-block was shown below the updated-at-block which looked oddly when the updated-at-block did not yet contain any information.
- the footer had no bottom margin as soon as the content was too long, fixed it

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -107,6 +107,7 @@ body {
 
 .footer {
 	margin-top:20px;
+	margin-bottom: 20px;
 }
 
 .clear {
@@ -151,6 +152,7 @@ body {
 	  left: 0;
 	  padding: 10px;
 	  padding-bottom: 0px;
+	  margin:0;
 	  z-index: 2;
 	}
 	
